docs: document the Agrona update may need `--add-opens`
Fixes https://github.com/apache/pekko-http/issues/887